--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -185,7 +185,7 @@ transition: 0.15s all linear;
 
 }
 
-#question{
+#question, #priority{
     background-color: white;
     /* margin: 84px 125.5px 0px 125.5px; */
     margin: 84px 0px 0px -50px;
@@ -198,7 +198,7 @@ transition: 0.15s all linear;
     position: relative;
 }
 
-#questionTitle{
+.questionTitle{
     font-size: 33px;
     font-weight: 700;
     margin: 0px 0px 33px 0px;
@@ -206,14 +206,13 @@ transition: 0.15s all linear;
     color: #01b4dc;
 }
 
-#questionInfo{
+.questionInfo{
     font-size: 33px;
     font-weight: 400;
     margin: 0px 0px 33px 0px;
     padding: 0px 0px 0px 0px;
     min-height: 155px;
 }
-
 
 .question-button-prev{
     position: absolute;
@@ -317,4 +316,134 @@ transition: 0.15s all linear;
 
 #partijen div h6{
     border-bottom: 2px solid black;
+}
+
+#myProgress{
+    width: calc(100% + 51px);
+    background-color: white;
+    position: relative;
+    left: -51px;
+    top: 84px;
+    right: 0;
+    transition: 0.15s all linear;
+}
+
+#myBar{
+    width: 0%;
+    height: 5px;
+    background-color: blue;
+    transition: 0.15s all linear;
+}
+
+.party-opinion{
+    position: relative;
+}
+
+.tooltiptext{
+    visibility: hidden;
+    width: 400px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 5px;
+
+    position: absolute;
+    z-index: 1;
+}
+
+.tooltiptext-right{
+    left: 100px;
+}
+
+.tooltiptext-left{
+    left: -500px;
+}
+
+.party-opinion:hover .tooltiptext {
+    visibility: visible;
+}
+
+
+/* The container */
+.checkbox-container {
+  display: block !important;
+  position: relative !important;
+  padding-left: 35px !important;
+  margin-bottom: 12px !important;
+  cursor: pointer !important;
+  font-size: 22px !important;
+  -webkit-user-select: none !important;
+  -moz-user-select: none !important;
+  -ms-user-select: none !important;
+  user-select: none !important;
+  width: 40%;
+  margin-right: 10%;
+  border-bottom: 1px solid black;
+}
+
+/* Hide the browser's default checkbox */
+.checkbox-container input {
+  position: absolute !important;
+  opacity: 0 !important;
+  cursor: pointer !important;
+  height: 0 !important;
+  width: 0 !important;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute !important;
+  top: 0 !important;
+  left: 0 !important;
+  height: 25px !important;
+  width: 25px !important;
+  background-color: #eee !important;
+  border: 1px solid black;
+  border-radius: 5px;
+}
+
+/* On mouse-over, add a grey background color */
+.checkbox-container:hover input ~ .checkmark {
+  background-color: #ccc !important;
+}
+
+/* When the checkbox is checked, add a blue background */
+.checkbox-container input:checked ~ .checkmark {
+  background-color: #2196F3 !important;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "" !important;
+  position: absolute !important;
+  display: none !important;
+}
+
+/* Show the checkmark when checked */
+.checkbox-container input:checked ~ .checkmark:after {
+  display: block !important;
+}
+
+/* Style the checkmark/indicator */
+.checkbox-container .checkmark:after {
+  left: 9px !important;
+  top: 5px !important;
+  width: 5px !important;
+  height: 10px !important;
+  border: solid white !important;
+  border-width: 0 3px 3px 0 !important;
+  -webkit-transform: rotate(45deg) !important;
+  -ms-transform: rotate(45deg) !important;
+  transform: rotate(45deg) !important;
+}
+
+#priority-container{
+    display: flex;
+    flex-wrap: wrap;
+    margin: 150px -125px -14px -125px;
+    width: calc(100% + 250px);
+    justify-content: space-between;
+    background-color: #e7eaeb;
+    padding: 25px;
 }
